# esp-components

./: .gitignore  .gitmodules  README.md  TODO.md
.github/workflows/: build.yml
components/experimental/: CMakeLists.txt
components/experimental/test/: log  log.cpp  stream  stream.cpp
components/facility/: CMakeLists.txt
components/fmt/: CMakeLists.txt
components/http/: CMakeLists.txt
components/http/src/: server.cpp
components/lg/: CMakeLists.txt  TODO.md
components/ota/: CMakeLists.txt  README.md
components/ota/src/: packet.cpp  websocket.cpp
components/peripherals/: CMakeLists.txt
components/peripherals/src/: water_flow.cpp
components/sys/: CMakeLists.txt
components/sys/include/sys/: error.hpp  event.hpp  net.hpp  nvs.hpp  sys.hpp  task.hpp  time.hpp  timer.hpp  type_traits.hpp
components/sys/src/: event.cpp  net.cpp  nvs.cpp  sys.cpp  task.cpp  time.cpp  timer.cpp
components/type_traits/include/: type_traits.hpp
components/uc/: CMakeLists.txt
components/uc/include/: uc.hpp
components/uc/src/: adc_stream.cpp  gpio.cpp  pulse_counter.cpp  serial.cpp
components/wave/: CMakeLists.txt
components/wave/include/: wave.hpp
components/websocket/: CMakeLists.txt
components/websocket/src/: server.cpp
components/wifi/: CMakeLists.txt
components/wifi/src/: ap.cpp  common.cpp  simple_wifi_retry.cpp  simple_wps_retry.cpp  (+1 more)
examples/: README.md  run.sh
examples/echo_http_ws_serial/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
examples/log/: CMakeLists.txt
examples/wave/: CMakeLists.txt
scripts/: create_self_signed_cert.sh
(+133 files in other folders)
